--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran&family=Montserrat&family=Roboto:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Help_poor_people</title>
 </head>
 <body>
-    
+    <!-- Header Section -->
+    <section>
+        <div class="bg-img">
+            <div class="header-text">
+                <h1>“No one is useless in this world who lightens the burdens of another.”</h1>
+                <q>― Charles Dickens</q>
+                <div class="description">
+                    <p>“There is no exercise better for the heart than reaching down and lifting people up.” “When we give cheerfully and accept gratefully, everyone is blessed.” “You have not lived today until you have done something for someone who can never repay you.”</p>
+                    <button class="btn-primary">Donate Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
