semifinal or final code submit

--- a/index.html
+++ b/index.html
@@ -49,6 +49,72 @@
             <button class="btn-primary">Make Your Donation</button>
         </div>
     </section>
+    <div class="card-title">
+        <div class="plan-text">
+            <h1>How many way to Help</h1>
+            <p>GlobalGiving is a nonprofit that connects donors with grassroots projects around the world. Donate to charity and see your impact with regular updates.</p>
+        </div>
+    </div>
+    <section id="plan-donation">
+        
+        <div class="card card-1">
+            <img src="icons/shelter.png" alt="">
+            <h3>Shelter for poor</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolore.</p>
+        </div>
+        <div class="card card-2">
+            <img src="icons/food.png" alt="">
+            <h3>Food</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolore.</p>
+        </div>
+        <div class="card card-3">
+            <img src="icons/Frame-1.png" alt="">
+            <h3>Donate Zakat fund</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolore.</p>
+        </div>
+    </section>
+    <div class="blog">
+        <h1>OUR PRIORITIES</h1>
+        <p>You have not lived today until you have done something for someone who can never repay you</p>
+    </div>
+    <section id="image-gallary">
+        <div class="showcase">
+            <div class="card-image image-1"></div>
+            <h2>waiting for relief</h2>
+            <p>All donations to this fund will support hunger relief efforts in East Africa. Initially, the fund will help local, vetted partners address the affected communities' immediate needs, such as access to food, clean water, and basic sanitation. The fund will later transition to focus support on longer-term recovery efforts run by local organizations to address food insecurity.</p>
+            <a href="#" target="_blank" rel="noopener noreferrer">Read More</a>
+        </div>
+        <div class="showcase">
+            <div class="card-image image-2"></div>
+            <h2>Relief distribution</h2>
+            <p>All donations to this fund will support hunger relief efforts in East Africa. Initially, the fund will help local, vetted partners address the affected communities' immediate needs, such as access to food, clean water, and basic sanitation. The fund will later transition to focus support on longer-term recovery efforts run by local organizations to address food insecurity.</p>
+            <a href="#" target="_blank" rel="noopener noreferrer">Read More</a>
+        </div>
+        <div class="showcase">
+            <div class="card-image image-3"></div>
+            <h2>During Flood</h2>
+            <p>All donations to this fund will support hunger relief efforts in East Africa. Initially, the fund will help local, vetted partners address the affected communities' immediate needs, such as access to food, clean water, and basic sanitation. The fund will later transition to focus support on longer-term recovery efforts run by local organizations to address food insecurity.</p>
+            <a href="#" target="_blank" rel="noopener noreferrer">Read More</a>
+        </div>
+    </section>
+    <section id="sponsorship">
+        <h1><span>Sponsorship Scheme, Individual and Corporate Entities Undertake</span></h1>
+        <p class="islamic-text">Islamic Relief's orphan sponsorship programme supports over 37000 children around the world. Find out how you can sponsor an orphan from just 250tk a month.</p>
+        <div class="form-area">
+            <label for="">
+                <input class="email-input" type="email" placeholder="enter your email">
+                <button class="btn-subscribe">Sponsorship!</button>
+            </label>
+        </div>
+    </section>
+    <footer>
+        <div class="site-footer">
+            <h1>GIVE A HAND</h1>
+            <h2>Have a ?</h2>
+            <p>contact : 00022245</p>
+            <small>Copyright ©2022 All rights reserved | This template is made with  by Programming Hero</small>
+        </div>
+    </footer>
 
 </body>
 </html>
